Automatically backed up by Learn

--- a/my_list.html
+++ b/my_list.html
@@ -1,9 +1,7 @@
-["Calcination"
-"dissolution"
-"separation"
-"conjunction"
-"fermentation"
-"distillation"
-"transmutation"
-
-]
+<li>"Calcination"</li>
+<li>"dissolution"</li>
+<li>"separation"</li>
+<li>"conjunction"</li>
+<li>"fermentation"</li>
+<li>"distillation"</li>
+<li>"transmutation"</li>
